--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <!-- 여기는 예시 공부한것 -->
-    <link href="main.css" rel="stylesheet" />
+    <!-- <link href="main.css" rel="stylesheet" />
     <link href="/shared-assets/misc/link-element-example.css" rel="stylesheet" />
     <p>This text will be red as defined in the external stylesheet.</p>
     <p style="color: blue">
       The <code>style</code> attribute can override it, though.
-    </p>
+    </p> -->
     <!-- <link rel="icon" href="favicon.ico" />
     <link
       rel="apple-touch-icon"
